# arinja

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
arinja/: __main__.py  cli.py  db.py  news.py
config/: config.example.env
scripts/: arinja  init_db.py
tests/: test_cli.py
